--- a/index.html
+++ b/index.html
@@ -59,33 +59,56 @@ hardware design tools to make this easier.</p>
                 <div class="member-topic">Making accelerators more performant</div>
             </div>
         </div>
+<div class="member-item">
+            <div class="member-photo"><img src="static/members/yanwei.jpg"/></div>
+            <div class="member-info">
+                <div class="member-name">Yanwei Ye</div>
+                <div class="member-topic">Hardware/Software Codesign</div>
+            </div>
+        </div>
+<div class="member-item">
+            <div class="member-photo"><img src="static/members/reuben.jpg"/></div>
+            <div class="member-info">
+                <div class="member-name">Reuben Carolan</div>
+                <div class="member-topic">Programming hardware accelerators</div>
+            </div>
+        </div>
 </div>
 </p>
 <h1>Publications</h1>
-<p><h2>2024</h2>
+<p><h2>2026</h2>
+<ul>
+<li class="paper-item"><div class="paper-title">The Configuration Wall: Characterization and Elimination of Accelerator Configuration Overhead<span class="paper-venue">ASPLOS</span></div> <div class="paper-authors">Josse Van Delm, Anton Lydike, Joren Dumoulin, Jonas Crols, Xiaoling Yi, Ryan Antonio, <u>Jackson Woodruff</u>, Tobias Grosser, Marian Verhelst</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/asplos_26.pdf" target="_blank">PDF</a></li>
+</ul>
+<h2>2025</h2>
+<ul>
+<li class="paper-item"><div class="paper-title">ScaIR: Type-safe Complier Framework Compatible with MLIR<span class="paper-venue">The Scala Workshop</span></div> <div class="paper-authors">Maks Kret, Emilien Bauer, <u>Jackson Woodruff</u>, Amir Shaikhha</div> <div></div></li>
+<li class="paper-item"><div class="paper-title">Guess, Measure &amp; Edit: Using Lowering to Lift Tensor Code<span class="paper-venue">PACT</span></div> <div class="paper-authors">José Wesley de Souza Magalhães, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Alexander Brauckmann, Luc Jaulmes, Elizabeth Polgreen, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/pact_25.pdf" target="_blank">PDF</a></li>
+</ul>
+<h2>2024</h2>
 <ul>
 <li class="paper-item"><div class="paper-title">Forklift: An Extensible Neural Lifter<span class="paper-venue">COLM</span></div> <div class="paper-authors">Jordi Armengol-Estapé, Rodrigo R.O. Rocha, <u>Jackson Woodruff</u>, Psquale Minervini, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/pdf/2404.16041" target="_blank">PDF</a></li>
-<li class="paper-item"><div class="paper-title">Secco: Codesign for Resource Sharing in Regular Expression Accelerators<span class="paper-venue">ASP-DAC</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/woodruff_aspdac_24.pdf" target="_blank">PDF</a>, <a href="https://github.com/j-c-w/APsim" target="_blank">Code</a></li>
+<li class="paper-item"><div class="paper-title">Secco: Codesign for Resource Sharing in Regular Expression Accelerators<span class="paper-venue">ASP-DAC</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/woodruff_aspdac_24.pdf" target="_blank">PDF</a>, <a href="https://github.com/j-c-w/APsim" target="_blank">Code</a></li>
 <li class="paper-item"><div class="paper-title">SLaDe: A Portable Small Language Model Decompiler for Optimized Assembler<span class="paper-venue">CGO</span></div> <div class="paper-authors">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Chris Cummins, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/pdf/2305.12520.pdf" target="_blank">Paper</a></li>
-<li class="paper-item"><div class="paper-title">Acceleration for the many, not the few<span class="paper-venue">PhD Thesis, University of Edinburgh</span></div> <div class="paper-authors"><u>Jackson Woodruff</u></div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/AFTMNTF.pdf" target="_blank">PDF</a></li>
+<li class="paper-item"><div class="paper-title">Acceleration for the many, not the few<span class="paper-venue">PhD Thesis, University of Edinburgh</span></div> <div class="paper-authors"><u>Jackson Woodruff</u></div> <div></div><a href="https://jacksonwoodruff.com/pdfs/AFTMNTF.pdf" target="_blank">PDF</a></li>
 </ul>
 <h2>2023</h2>
 <ul>
 <li class="paper-item"><div class="paper-title">Rewriting History: Repurposing Domain-Specific CGRAs<span class="paper-venue">arXiv</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Thomas Koehler, Alexander Brauckmann, Chris Cummins, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/pdf/2309.09112.pdf" target="_blank">PDF</a>, <a href="https://github.com/j-c-w/CGRA-Mapper" target="_blank">Code</a></li>
 <li class="paper-item"><div class="paper-title">C2TACO: Lifting Tensor Code to TACO<span class="paper-venue">GPCE</span></div> <div class="paper-authors">José Wesley de Souza Magalhães, <u>Jackson Woodruff</u>, Elizabeth Polgreen, Michael F.P. O'Boyle</div> <div> <span class='paper-awards'>GPCE Best Paper Award</span></div><a href="https://josewesley.com/archive/c2taco.pdf" target="_blank">Paper</a>, <a href="https://github.com/JWesleySM/c2taco" target="_blank">Code</a></li>
-<li class="paper-item"><div class="paper-title">When does saving power save the planet?<span class="paper-venue">HotCarbon</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff</div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/hotcarbon23.pdf" target="_blank">Paper</a></li>
-<li class="paper-item"><div class="paper-title">Designing CGRAs with Deep Reinforcement Learning<span class="paper-venue">DoSSA</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Chris Cummins</div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/dossa23.pdf" target="_blank">Paper</a>, <a href="https://github.com/j-c-w/RL_streaming_engine" target="_blank">Code</a></li>
+<li class="paper-item"><div class="paper-title">When does saving power save the planet?<span class="paper-venue">HotCarbon</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, David Schall, Michael F.P. O'Boyle, Christopher Woodruff</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/hotcarbon23.pdf" target="_blank">Paper</a></li>
+<li class="paper-item"><div class="paper-title">Designing CGRAs with Deep Reinforcement Learning<span class="paper-venue">DoSSA</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Chris Cummins</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/dossa23.pdf" target="_blank">Paper</a>, <a href="https://github.com/j-c-w/RL_streaming_engine" target="_blank">Code</a></li>
 <li class="paper-item"><div class="paper-title">Matching linear algebra and tensor code to specialized hardware accelerators<span class="paper-venue">CC</span></div> <div class="paper-authors">Pablo Antonio Martínez, <u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Gregorio Bernabé, José Manuel García, Michael F.P. O'Boyle</div> <div></div><a href="https://arxiv.org/abs/2301.11659" target="_blank">Preprint</a></li>
 </ul>
 <h2>2022</h2>
 <ul>
-<li class="paper-item"><div class="paper-title">Bind the Gap: Compiling Real Software to Hardware FFT Accelerators<span class="paper-venue">PLDI</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/pldi2022.pdf" target="_blank">Preprint</a>, <a href="https://github.com/FourierACceleratorCompiler/FACC" target="_blank">Code</a>, <a href="https://www.youtube.com/watch?v=yIOOX4whEd8&list=PLyrlk8Xaylp4aGsN5wVcECG736A2JeMon&index=10&ab_channel=ACMSIGPLAN" target="_blank">Talk</a></li>
+<li class="paper-item"><div class="paper-title">Bind the Gap: Compiling Real Software to Hardware FFT Accelerators<span class="paper-venue">PLDI</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Jordi Armengol-Estapé, Sam Ainsworth, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/pldi2022.pdf" target="_blank">Preprint</a>, <a href="https://github.com/FourierACceleratorCompiler/FACC" target="_blank">Code</a>, <a href="https://www.youtube.com/watch?v=yIOOX4whEd8&list=PLyrlk8Xaylp4aGsN5wVcECG736A2JeMon&index=10&ab_channel=ACMSIGPLAN" target="_blank">Talk</a></li>
 <li class="paper-item"><div class="paper-title">ExeBench: an ML-scale dataset of executable C functions<span class="paper-venue">MAPS@PLDI</span></div> <div class="paper-authors">Jordi Armengol-Estapé, <u>Jackson Woodruff</u>, Alexander Brauckmann, José Wesley de Souza Magalhães, Michael F.P. O'Boyle</div> <div></div><a href="https://dl.acm.org/doi/abs/10.1145/3520312.3534867" target="_blank">Paper</a></li>
 </ul>
 <h2>2021</h2>
 <ul>
 <li class="paper-item"><div class="paper-title">NRG: A Network Perspective on Applications' Performance<span class="paper-venue">TMA</span></div> <div class="paper-authors">Noa Zilberman, Andrew W Moore, Billy Cooper, <u>Jackson Woodruff</u>, Yuta Tokusashi, Pietro Bressana, Murali Ramanujam, Salvator Galea</div> <div></div><a href="https://eng.ox.ac.uk/media/9964/zilberman21nrg.pdf" target="_blank">PDF</a></li>
-<li class="paper-item"><div class="paper-title">New Regular Expressions on Old Accelerators<span class="paper-venue">58th Design Automation Conference</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/static/pdfs/DAC_2021_Paper.pdf" target="_blank">Preprint</a>, <a href="https://github.com/j-c-w/RXPSC" target="_blank">Code</a></li>
+<li class="paper-item"><div class="paper-title">New Regular Expressions on Old Accelerators<span class="paper-venue">58th Design Automation Conference</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Michael F.P. O'Boyle</div> <div></div><a href="https://jacksonwoodruff.com/pdfs/DAC_2021_Paper.pdf" target="_blank">Preprint</a>, <a href="https://github.com/j-c-w/RXPSC" target="_blank">Code</a></li>
 </ul>
 <h2>2020</h2>
 <ul>
@@ -95,7 +118,7 @@ hardware design tools to make this easier.</p>
 <h2>2019</h2>
 <ul>
 <li class="paper-item"><div class="paper-title">Measuring Burstiness in Data Center Applications<span class="paper-venue">Buffers Workshop</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Andrew W Moore, Noa Zilberman</div> <div></div><a href="https://www.cl.cam.ac.uk/~nz247/publications/woodruff2019measuring.pdf" target="_blank">PDF</a></li>
-<li class="paper-item"><div class="paper-title">P4DNS: In-Network DNS<span class="paper-venue">EuroP4</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Murali Ramanumjam, Noa Zilberman</div> <div> <span class='paper-notes'>(Also presented at ICIN 2020 and IETF Meeting 107 to the COIN sub-group)</span> <span class='paper-awards'>Xilinx Open Hardware Award 2020</span></div><a href="https://jacksonwoodruff.com/static/pdfs/woodruff2019p4dns.pdf" target="_blank">PDF</a>, <a href="https://github.com/cucl-srg/P4DNS" target="_blank">Code</a>, <a href="https://www.youtube.com/watch?v=m-dPfx9j9Tw&ab_channel=JacksonWoodruff" target="_blank">Video</a></li>
+<li class="paper-item"><div class="paper-title">P4DNS: In-Network DNS<span class="paper-venue">EuroP4</span></div> <div class="paper-authors"><u>Jackson Woodruff</u>, Murali Ramanumjam, Noa Zilberman</div> <div> <span class='paper-notes'>(Also presented at ICIN 2020 and IETF Meeting 107 to the COIN sub-group)</span> <span class='paper-awards'>Xilinx Open Hardware Award 2020</span></div><a href="https://jacksonwoodruff.com/pdfs/woodruff2019p4dns.pdf" target="_blank">PDF</a>, <a href="https://github.com/cucl-srg/P4DNS" target="_blank">Code</a>, <a href="https://www.youtube.com/watch?v=m-dPfx9j9Tw&ab_channel=JacksonWoodruff" target="_blank">Video</a></li>
 </ul>
 
 </p>
@@ -105,7 +128,7 @@ hardware design tools to make this easier.</p>
 <iframe id="map-canvas" class="map_part" width="100%"  height="450"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=100%&amp;hl=en&amp;q=Informatics Forum, Edinburgh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></main>
     <footer>
         <span class="copyright-notice">&copy; 2025 - Jackson Woodruff</span>
-        <span class="meta-info">Last updated 2025-18-04 16:13</span>
+        <span class="meta-info">Last updated 2025-30-10 18:35</span>
     </footer>
 </body>
 </html>
